# flappy-bird

./: .gitignore  CMakeLists.txt  Makefile  README.md  biome.json  bird.cpp  bird.h  flappyBird  game.cpp  game.h  main.cpp  package.json  tsconfig.json
lib/: background.cpp  background.h  base.cpp  bird.cpp  bird.h  game.cpp  game.h  init_overlay.cpp  obstacle.cpp  obstacle.h
public/: bundle.min.js.map  index.html  style.css
scripts/: esbuild.dev.mjs  esbuild.prod.mjs
src/: CMakeLists.txt  background.ts  base.ts  bird.ts  game.ts  gameover.ts  main.cpp  main.ts  overlay.ts  pipe.ts  score.ts
src/lib/: background.cpp  background.h  base.h  bird.cpp  game.cpp  game.h  game_over.cpp  game_over.h  init_overlay.h  obstacle_manager.cpp  obstacle_manager.h  score_card.cpp  score_card.h
